jenkins_svc_default_format.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  labels:
    app: jenkins
  name: jenkins
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 50000-tcp
    port: 50000
    protocol: TCP
    targetPort: 50000
  selector:
    app: jenkins
    deploymentconfig: jenkins
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
