jenkins_example_route.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: null
    labels:
      app: jenkins
    name: jenkins
  spec:
    host: jenkins-ocp-objects.apps.d2.casl.rht-labs.com
    port:
      targetPort: 8080-tcp
    tls:
      termination: passthrough
    to:
      kind: Service
      name: jenkins
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2017-09-11T21:33:17Z
        status: "True"
        type: Admitted
      host: jenkins-ocp-objects.apps.d2.casl.rht-labs.com
      routerName: router
      wildcardPolicy: None
kind: List
metadata: {}
